force-app/main/default/objects/Service_monitoring__c/Service_monitoring__c.object-meta.xml
<CustomObject>
    <label>Work Status</label>
    <nameField>
        <label>Service Monitoring Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>