force-app/main/default/objects/Service_monitoring__c/fields/Customer_NIF__c.field-meta.xml
<CustomField>
    <fullName>Customer_NIF__c</fullName>
    <label>Customer NIF</label>
    <length>20</length>
    <type>Text</type>
</CustomField>