force-app/main/default/objects/Service_monitoring__c/fields/FOR_Nif__c.field-meta.xml
<CustomField>
    <fullName>FOR_Nif__c</fullName>
    <formula>Related_reception_service__r.Account.Document_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FOR_Nif</label>
    <type>Text</type>
</CustomField>