force-app/main/default/objects/Service_monitoring__c/fields/FOR_NumberPlate__c.field-meta.xml
<CustomField>
    <fullName>FOR_NumberPlate__c</fullName>
    <formula>Related_reception_service__r.LK_Vehicle__r.TX_Car_Number_Plate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FOR_NumberPlate</label>
    <type>Text</type>
</CustomField>