force-app/main/default/objects/Service_monitoring__c/fields/LK_Related_Reception__c.field-meta.xml
<CustomField>
    <fullName>LK_Related_Reception__c</fullName>
    <label>Related Reception</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Service_Monitorings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>