force-app/main/default/objects/Service_monitoring__c/fields/Related_reception_service__c.field-meta.xml
<CustomField>
    <fullName>Related_reception_service__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related reception of service</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Work Statuses (Related reception of service)</relationshipLabel>
    <relationshipName>Work_Statuses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>