force-app/main/default/objects/Service_monitoring__c/fields/related_service__c.field-meta.xml
<CustomField>
    <fullName>related_service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related service</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Service_Monitorings</relationshipName>
    <type>Lookup</type>
</CustomField>