force-app/main/default/objects/Service_monitoring__c/fields/TXT_Reception_Id__c.field-meta.xml
<CustomField>
    <fullName>TXT_Reception_Id__c</fullName>
    <label>TXT Reception Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>