force-app/main/default/objects/Service_monitoring__c/fields/Vehicle_Number_Plate__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Number_Plate__c</fullName>
    <label>Vehicle Number Plate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>